fix(ios): hid transformation text on iOS

--- a/styles/config/base.css
+++ b/styles/config/base.css
@@ -122,6 +122,10 @@
     display: none;
     @media (min-width: $media-screen-small) {
       display: block;
+
+      .js--ios & {
+        display: none;
+      }
     }
   }
 
